# claude-best-practices

./: .gitignore  CLAUDE.md  Notes  README.md  bootstrap.sh
.claude/: README.md  settings.json
config/: .secretsignore  discoveries.json  dual-home-resources.yml  pipeline-stages.yaml  repos.yml  settings.yml  telemetry-aggregates.json  test-pipeline.yml  third-party-skills.yml  topics.yml  trust-score.yml  urls.yml  workflow-contracts.yaml  workflow-groups.yml
core/: CLAUDE.local.md.template  CLAUDE.md.template
docs/: DASHBOARD.md  GAP-ANALYSIS-PRD-TO-PROD.md  GETTING-STARTED.md  HUB-CORE-SYNC.md  KKB-GAP-ANALYSIS.md  QA-AGENT-ECOSYSTEM-RESEARCH-2026-04-22.md  SKILL-BACKLOG.md  SKILL-RESEARCH-by-Twitter-x-and-redit-skills 2026-03-11.md  dashboard.html  (+9 more)
scripts/tests/smoke-test/todo-api/: CHANGELOG.md  Dockerfile  README.md  SEED-REQUIREMENT.md  pyproject.toml
scripts/tests/smoke-test/todo-api/.github/workflows/: ci.yml
scripts/tests/smoke-test/todo-api/docs/: ARCHITECTURE.md  HANDOVER.md
scripts/tests/smoke-test/todo-api/docs/plans/: todo-api-plan.md  todo-api-prd.md  todo-api-progress.md
scripts/tests/smoke-test/todo-api/docs/schema/: erd.md
scripts/tests/smoke-test/todo-api/docs/stages/: PIPELINE-SUMMARY.md
scripts/tests/smoke-test/todo-api/migrations/: 001_initial.sql
scripts/tests/smoke-test/todo-api/scripts/: seed.py
scripts/tests/smoke-test/todo-api/src/todo_api/: main.py  models.py  router.py
scripts/tests/smoke-test/todo-api/tests/: conftest.py  test_auth.py  test_todos.py
scripts/tests/smoke-test/todo-api/tests/security/: threat-model.md
(+1340 files in other folders)
